# zephyr-tests

blackpill-mcuboot/: CMakeLists.txt  Makefile  README.md  prj.conf
blackpill-mcuboot-serial/: .gitignore  README.md
blackpill-mcuboot-serial/alt/: .gitignore  Cargo.toml  Makefile.toml  memory.x
blackpill-mcuboot-serial/alt/.cargo/: config
blackpill-mcuboot-serial/alt/src/: main.rs
blackpill-mcuboot-serial/mcuboot/: prj.conf
blackpill-mcuboot-serial/src/: main.c
blackpill-mcuboot-usb/: CMakeLists.txt  Makefile  README.md  prj.conf
blackpill-mcuboot-usb/boards/: blackpill_f401ce.overlay
blackpill-mcuboot-usb/mcuboot/: prj.conf
blackpill-mcuboot-usb/src/: main.c
blackpill-mcuboot-usb/support/: openocd.cfg
blackpill-mcuboot/boards/: blackpill_f401ce.overlay
blackpill-mcuboot/boards/arm/blackpill/: Kconfig.board  Kconfig.defconfig  blackpill.dts  blackpill.yaml  blackpill_defconfig  board.cmake  pinmux.c
blackpill-mcuboot/mcuboot/: prj.conf
nrf52dk-nfc-tag/: CMakeLists.txt  README.md  prj.conf
nrf52dk-nfc-tag/src/: main.c
nrf52dk-rtt/: README.md  prj.conf
nrf52dk-rtt/src/: main.c
