[package]
name = "test-rs-fw"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.13"
cortex-m="0.7.1"
panic-halt= "0.2.0"
nb = "0.1.2"

[dependencies.embedded-hal]
version="0.2.4"
features=["unproven"]

[dependencies.rtt-target]
version = "0.3.0"
features = ["cortex-m"]

[dependencies.panic-rtt-target]
version = "0.1.1"
features = ["cortex-m"]

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f401"]
